Fix for overflow on Firefox

--- a/scss/base/_content.scss
+++ b/scss/base/_content.scss
@@ -10,6 +10,7 @@ $sections-size: 20%;
     flex-direction: column;
     flex: 1;
     width: 100%;
+    overflow-x: hidden;
   }
   &__header {
     z-index: 10;
